fixed minor bugs

--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
         </div>
         <div id="place-container">
           <div id="country-container">
-            <div id="country">POLANPOLANPOLANPOLAN</div>
+            <div id="country"></div>
           </div>
           <div id="city-container">
-            <div id="city">Warsaw</div>
+            <div id="city"></div>
           </div>
         </div>
         <div id="price-container">
           <div id="price-wrapper">
-            <div id="label">from</div>
-            <div id="price">399 USD</div>
+            <div id="label"></div>
+            <div id="price"></div>
           </div>
         </div>
         <button id="book-btn">BOOK NOW</button>
