--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Zadanie VIP</title>
+    <title>Flybee</title>
     <meta name="ad.size" content="width=300, height=600" />
     <link rel="stylesheet" href="style.css" />
     <script src="main.js" defer></script>
